fix: fix gaps between cards

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-.main-title {
-  font-size: 5rem;
+body {
+  font-size: 16px;
 }
 
-.welcome-container {
-  height: 35vh;
+.main-title {
+  font-size: 4rem;
+}
+
+img {
+  min-height: 220px;
 }
